@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Speaker service implementation.
@@ -51,7 +50,7 @@ public class SpeakerServiceImpl implements SpeakerService {
 
                     return firstLetter.equalsIgnoreCase(nameFirstLetter);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -60,7 +59,7 @@ public class SpeakerServiceImpl implements SpeakerService {
 
         return speakerDao.getSpeakers().stream()
                 .filter(s -> LocalizationUtils.getString(s.getNameWithLastNameFirst(), language).toLowerCase().indexOf(lowerCaseFirstLetters) == 0)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -84,7 +83,7 @@ public class SpeakerServiceImpl implements SpeakerService {
                             (!isGitHubSet || SearchUtils.isSubstringFound(trimmedLowerCasedGitHub, s.getGitHub())) &&
                             (!isJavaChampion || s.isJavaChampion()) &&
                             (!isMvp || s.isAnyMvp())))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
